[package]
name = "one-billion-row-challenge"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
ahash = { version = "0.8.11" }
anyhow = "1.0.97"
hashbrown = { version = "0.15.2", features = ["rayon"] }
memchr = "2.7.4"
memmap2 = "0.9.5"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "1brc_benchmark"
harness = false
