[package]
name = "one-billion-row-challenge"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
anyhow = "1.0.97"
memmap2 = "0.9.5"
rand = "0.9.0"
rand_distr = "0.5.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "1brc_benchmark"
harness = false
